[package]
name = "weekend_raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", default_features = false, features = ["wgpu"] }
#eframe = { version = "0.19.0" }

[profile.release]
opt-level = 3
lto = false
debug = false
